Finish Swagger
